**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- bam(...,sparse=TRUE) [1.8-5]
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-13

* Faster code used in 'uniquecombs'. Speeds up discretization step in 
  'bam(...,discrete=TRUE)'. Could still be improved for multi-column case.

* 'gam.side' fix to avoid duplication of smooth model matrices to be tested 
  against, when checking for numerical degeneracy. Problem could occasionally 
  cause a failure (especially with bam), when the total matrix to be tested 
  against ended upo with more columns than rows.

* 4 occurances of as.name("model.frame") changed to quote(stats::model.frame)
	
* fix in predict.bamd discrete prediction code to be a bit more relaxed about 
  use of as.factor, etc in formulae.

* fix in predict.gam handling of 'na.action' to avoid trying to get type of
  na.action from name of na.action function - this was fragile to nesting
  and could cause predict.bam to fail in the presence of NA's.

* fix of gam.outer so that general families (e.g. cox.ph) can have all
  their smoothing parameters supplied without then ignoring the penalties!

* fix in multiple formulae handling of fixed smoothing parameters.

* Fix of bug in zlim handling in vis.gam perspective plot with standard 
  errors. Thanks Petra Kuhnert. 

* probit link added to 'jagam' (suggested by Kenneth Knoblauch).

* 'Sl.' routines revised to allow operation with non-linearly parameterized
  smoothers. 	

* bug fix in Hessian computation in gam.fit5 - leading diagonal of Hessian of 
  log|Hp| could be wrong where Hp is penalized Hessian. 

1.8-12

** "bs" B-spline smoothing basis. B-splines with derivative based penalties
  of various orders.

* 'gamm' now uses a fixed scale parameter in PQL estimation for Poisson and 
  binomial data via the `sigma' option in lmeControl.
